--- a/26_Apache_Structured_Streaming_Yeni_API/ReadFromConsole.ipynb
+++ b/26_Apache_Structured_Streaming_Yeni_API/ReadFromConsole.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import findspark\n",
-    "findspark.init()"
+    "findspark.init(\"/usr/hdp/current/spark2-client/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,41 +23,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
-    ".master(\"local[4]\") \\\n",
-    ".appName(\"ReafDromFile\") \\\n",
-    ".config(\"spark.driver.memory\",\"2g\") \\\n",
-    ".config(\"spark.executor.memory\",\"4g\") \\\n",
+    ".master(\"yarn\") \\\n",
+    ".appName(\"ReadFromConsole\") \\\n",
     ".getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "lines = spark.readStream \\\n",
-    ".format(\"text\") \\\n",
-    ".load(\"D:\\\\spark-streaming-test\")"
+    ".format(\"socket\") \\\n",
+    ".option(\"host\",\"sandbox-hdp.hortonworks.com\") \\\n",
+    ".option(\"port\", 9999) \\\n",
+    ".load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = lines.select(f.explode(f.split(f.col(\"value\"), \" \")).alias(\"word\"))"
+    "words = lines.select(f.explode(f.split(f.col(\"value\"), \"\\s+\")).alias(\"word\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sandbox komut satırından nc -l 9999 ile netcat server başlatılır"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +92,15 @@
    "outputs": [],
    "source": [
     "query.awaitTermination()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nc consoldan girilen girdilerin streaming ile işlenmiş hali jupyter consoldan gözlenir"
    ]
   },
   {
@@ -118,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
