RDD notebooks düzenlendi

--- a/18_RDD_Transformasyon_Operasyonlari/jupyter_map_flatMap_yarn.ipynb
+++ b/18_RDD_Transformasyon_Operasyonlari/jupyter_map_flatMap_yarn.ipynb
@@ -87,12 +87,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simple_data_rdd2 = simple_data_rdd.filter(lambda x: \"sirano\" not in x)"
+    "# header'dan kurtulma\n",
+    "insanlarRDD = simple_data_rdd.filter(lambda x: \"sirano\" not in x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -100,80 +101,103 @@
       "text/plain": [
        "['1,Cemal,35,Isci,Ankara,3500',\n",
        " '2,Ceyda,42,Memur,Kayseri,4200',\n",
-       " '3,Timur,30,Müzisyen,Istanbul,9000']"
+       " '3,Timur,30,Müzisyen,Istanbul,9000',\n",
+       " '4,Burcu,29,Pazarlamaci,Ankara,4200',\n",
+       " '5,Yasemin,23,,Bursa,4800']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simple_data_rdd2.take(3)"
+    "# Okunan dosyaya gözatma\n",
+    "insanlarRDD.take(5)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1,CEMAL,35,ISCI,ANKARA,3500',\n",
+       " '2,CEYDA,42,MEMUR,KAYSERI,4200',\n",
+       " '3,TIMUR,30,MÜZISYEN,ISTANBUL,9000',\n",
+       " '4,BURCU,29,PAZARLAMACI,ANKARA,4200',\n",
+       " '5,YASEMIN,23,,BURSA,4800']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# map()"
+    "# map() transformation: transformasyon satırın tümüne uygulanır\n",
+    "insanlarRDD.map(lambda x: x.upper()).take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', ',', 'C', 'E', 'M', 'A', 'L', ',', '3', '5', ',', 'I', 'S', 'C', 'I']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# flatMap(): transformasyon bir birime uygulanır. split ile herhangi birşey belirtilmemişse her bir karaktere uygulanır.\n",
+    "insanlarRDD.flatMap(lambda x: x.upper()).take(15)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1',\n",
+       " 'CEMAL',\n",
+       " '35',\n",
+       " 'ISCI',\n",
+       " 'ANKARA',\n",
+       " '3500',\n",
+       " '2',\n",
+       " 'CEYDA',\n",
+       " '42',\n",
+       " 'MEMUR',\n",
+       " 'KAYSERI',\n",
+       " '4200',\n",
+       " '3',\n",
+       " 'TIMUR',\n",
+       " '30']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# flatMap() transformation: split ile boşluktan ayırdık ve transformasyon karakterden kelimeye dönüştü.\n",
+    "insanlarRDD.flatMap(lambda x: x.split(\",\")).map(lambda x: x.upper()).take(15)"
+   ]
   }
  ],
  "metadata": {
@@ -192,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
