--- a/18_RDD_Transformasyon_Operasyonlari/jupyter_rdd_basic_transformation_action_test_cevaplari.ipynb
+++ b/18_RDD_Transformasyon_Operasyonlari/jupyter_rdd_basic_transformation_action_test_cevaplari.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import findspark\n",
-    "findspark.init()"
+    "findspark.init(\"D:/spark\")"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ubuntu = sc.textFile(\"C:/Users/toshiba/Desktop/ubuntu.txt\").count()"
+    "simple_data_row_count = sc.textFile(\"D:/Datasets/simple_data.csv\").count()"
    ]
   },
   {
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "77"
+       "18"
       ]
      },
      "execution_count": 13,
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "ubuntu"
+    "simple_data_row_count"
    ]
   },
   {
@@ -187,27 +187,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ubuntu_rdd = sc.textFile(\"C:/Users/toshiba/Desktop/ubuntu.txt\")"
+    "simple_data_rdd = sc.textFile(\"D:/Datasets/simple_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "238"
+       "['sirano,isim,yas,meslek,sehir,aylik_gelir',\n",
+       " '1,Cemal,35,Isci,Ankara,3500',\n",
+       " '2,Ceyda,42,Memur,Kayseri,4200']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ubuntu_rdd.flatMap(lambda x: x.split(\" \")).count()"
+    "simple_data_rdd.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simple_data_rdd_wh = simple_data_rdd.filter(lambda x: \"sirano\" not in x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1,Cemal,35,Isci,Ankara,3500',\n",
+       " '2,Ceyda,42,Memur,Kayseri,4200',\n",
+       " '3,Timur,30,Müzisyen,Istanbul,9000']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simple_data_rdd_wh.take(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simple_data_word_number = simple_data_rdd_wh.flatMap(lambda x: x.split(\",\")).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(simple_data_word_number)"
    ]
   },
   {
@@ -384,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
