pair rdd notebooklar gözden geçirildi

--- a/18_RDD_Transformasyon_Operasyonlari/jupyter_rdd_basic_transformation_action_odev_cevaplari.ipynb
+++ b/18_RDD_Transformasyon_Operasyonlari/jupyter_rdd_basic_transformation_action_odev_cevaplari.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-1"
+    "# SORU-1\n",
+    "Bir Spark uygulaması oluşturunuz ve ekrana Merhaba Spark yazınız."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +71,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-2"
+    "# SORU-2\n",
+    "[3, 7, 13, 15, 22, 36, 7, 11, 3, 25] listesinden bir rdd oluşturup içeriğini ekrana yazdırınız."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +95,7 @@
        "[3, 7, 13, 15, 22, 36, 7, 11, 3, 25]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +108,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-3"
+    "# SORU-3\n",
+    "\"Spark'ı öğrenmek çok heyecan verici\" cümlesini bir rdd yapınız ve tüm harflarini büyük yaparak ekrana yazdırınız."
    ]
   },
   {
@@ -142,7 +145,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-4"
+    "# SORU-4\n",
+    "simple_data.csv dosyasındaki satır sayısını ekrana yazdırınız."
    ]
   },
   {
@@ -178,7 +182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-5"
+    "# SORU-5\n",
+    "simple_data.csv dosyasında kaç tane kelime/rakam olduğunu bulunuz(başlık bilgileri hariç)"
    ]
   },
   {
@@ -273,7 +278,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-6"
+    "# SORU-6\n",
+    "Soru-2'deki rdd ile 1,2,3,4,5,6,7,8,9,10 rakamlarından oluşturacağınız rdd'nin ortak elemenlarından olaşan bir rdd elde ediniz."
    ]
   },
   {
@@ -309,12 +315,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-7"
+    "# SORU-7\n",
+    "[3,7,13,15,22,36,7,11,3,25] rakamlarını tekilleştirerek bir rdd oluşturunuz."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,51 +330,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{3, 7, 11, 13, 15, 22, 25, 36}"
+       "[3, 7, 13, 15, 22, 36, 7, 11, 3, 25]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rakamlar_dist = set(rakamlar)\n",
-    "rakamlar_dist"
+    "rakamlar_rdd = sc.parallelize(rakamlar)\n",
+    "rakamlar_rdd.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rakamlar_distnc_rdd = rakamlar_rdd.distinct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 36, 7, 11, 13, 15, 22, 25]"
+       "[22, 36, 3, 7, 13, 15, 11, 25]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rakamlar_dist_rdd = sc.parallelize(rakamlar_dist)\n",
-    "rakamlar_dist_rdd.collect()"
+    "rakamlar_distnc_rdd.collect()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SORU-8"
+    "# SORU-8\n",
+    "[3,7,13,15,22,36,7,11,3,25] listesinden bir rdd oluşturunuz ve hangi rakamın kaç defa tekrarlandığını bulunuz."
    ]
   },
   {
@@ -417,6 +433,61 @@
    ],
    "source": [
     "rdd.map(lambda x: (x,1)).reduceByKey(lambda x,y: x + y).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Yöntem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sonuc = rdd.countByValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {3: 2, 7: 2, 13: 1, 15: 1, 22: 1, 36: 1, 11: 1, 25: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sonuc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "collections.defaultdict"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(sonuc)"
    ]
   },
   {
